err/farmfs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/farmfs'...
Compiling './lib/python3.5/site-packages/farmfs/farmdbg.py'...
***   File "./lib/python3.5/site-packages/farmfs/farmdbg.py", line 11
    print value
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farmfs/fs.py'...
***   File "./lib/python3.5/site-packages/farmfs/fs.py", line 298
    print "***", path, orig
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farmfs/snapshot.py'...
***   File "./lib/python3.5/site-packages/farmfs/snapshot.py", line 191
    print "Removing %s" % delta._path
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farmfs/ui.py'...
***   File "./lib/python3.5/site-packages/farmfs/ui.py", line 39
    print thawed
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farmfs/volume.py'...
***   File "./lib/python3.5/site-packages/farmfs/volume.py", line 118
    print "Processing %s with csum %s" % (path, self.udd)
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/farmfs-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/func_prototypes'...
Listing './lib/python3.5/site-packages/func_prototypes-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
